--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  get: ^4.6.6
   email_validator: '^2.1.16'
   fluttertoast: ^8.0.8
   flutter:
@@ -63,7 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
       
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
